syntax = "proto3";
package keystone.v1.registry;

import "keystone/v1/core/envelope.proto";

// Simplified for MCP client -- field numbers MUST match a2a.v1.AgentCard on the
// Keystone server so that the wire-format bytes are compatible.

enum PublicKeyAlgorithm {
  PUBLIC_KEY_ALGORITHM_UNSPECIFIED = 0;
  PUBLIC_KEY_ALGORITHM_CURVE25519 = 1;
  PUBLIC_KEY_ALGORITHM_ED25519 = 2;
}

message KeystoneAgentCapabilities {
  bool envelope_processing = 1;
  bool ledger_persistence = 2;
  bool context_dag_traversal = 3;
  uint32 max_context_depth = 4;
  repeated keystone.v1.core.KeystoneEncryptionMode supported_encryption_modes = 5;
  bytes public_encryption_key = 6;
  PublicKeyAlgorithm public_key_algorithm = 7;
  repeated string supported_semantic_capabilities = 8;
  repeated string attestation_uids = 9;
  map<string, string> identity_attestations = 10;
}

// Describes a command the bot supports, surfaced in the FE as a table:
//   command | example | description
message CommandDescriptor {
  string command = 1;          // e.g. "/clarify"
  string example = 2;          // e.g. "/clarify what is PFT"
  string description = 3;      // e.g. "Used to ask questions about terms of use"
  uint64 min_cost_drops = 4;   // minimum PFT cost in drops (0 = no minimum beyond chain floor of 1 drop)
}

// Service provider information (matches a2a.v1.AgentProvider field layout).
message AgentProvider {
  string url = 1;
  string organization = 2;
}

// Simplified AgentCard -- field numbers MUST match a2a.v1.AgentCard.
// Only the fields the MCP client uses are declared; the rest are skipped.
//
// a2a.v1.AgentCard wire layout (for reference):
//   1 = name (string), 2 = description (string), 3 = url (string),
//   4 = provider (AgentProvider), 5 = version (string),
//   6 = documentation_url (string), 7+ = capabilities, security, skills ...
message SimpleAgentCard {
  string name = 1;
  string description = 2;
  string url = 3;
  AgentProvider provider = 4;   // was: string version = 4  (WRONG -- caused crash)
  string version = 5;           // was: string organization = 5
  // Field 6 is documentation_url in a2a -- NOT supported_commands.
  // supported_commands lives on the request/response, not inside the card.
}

service KeystoneAgentRegistryService {
  rpc StoreAgentCard(KeystoneStoreAgentCardRequest) returns (KeystoneStoreAgentCardResponse);
  rpc GetAgentCard(KeystoneGetAgentCardRequest) returns (KeystoneGetAgentCardResponse);
  rpc SearchAgents(KeystoneSearchAgentsRequest) returns (KeystoneSearchAgentsResponse);
  rpc DeleteAgentCard(KeystoneDeleteAgentCardRequest) returns (KeystoneDeleteAgentCardResponse);
}

// --- Store ---

message KeystoneStoreAgentCardRequest {
  SimpleAgentCard agent_card = 1;
  KeystoneAgentCapabilities keystone_capabilities = 2;
  string agent_id = 3;
  repeated CommandDescriptor supported_commands = 4;  // top-level, NOT inside agent_card
  string icon_emoji = 5;                              // bot icon emoji (e.g. "ðŸ¤–")
  string icon_color_hex = 6;                          // hex color without # (e.g. "FF5733")
  uint64 min_cost_first_message_drops = 7;            // min PFT in drops for first message (0 = chain floor)
}

message KeystoneStoreAgentCardResponse {
  SimpleAgentCard agent_card = 1;
  repeated CommandDescriptor supported_commands = 2;
  string icon_emoji = 3;
  string icon_color_hex = 4;
  uint64 min_cost_first_message_drops = 5;
  string agent_id = 6;  // The wallet address used as agent_id (server-derived)
}

// --- Get ---

message KeystoneGetAgentCardRequest {
  string agent_id = 1;
}

message KeystoneGetAgentCardResponse {
  SimpleAgentCard agent_card = 1;
  repeated CommandDescriptor supported_commands = 2;
  string icon_emoji = 3;
  string icon_color_hex = 4;
  uint64 min_cost_first_message_drops = 5;
}

// --- Search ---

message KeystoneSearchAgentsRequest {
  string query = 1;
  repeated string capabilities = 2;
  string organization = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message KeystoneSearchAgentsResponse {
  repeated KeystoneAgentSearchResult results = 1;
  int32 total_count = 2;
}

message KeystoneAgentSearchResult {
  string agent_id = 1;
  SimpleAgentCard agent_card = 2;
  KeystoneAgentCapabilities keystone_capabilities = 3;
  float relevance_score = 4;
  repeated CommandDescriptor supported_commands = 5;
  string icon_emoji = 6;
  string icon_color_hex = 7;
  uint64 min_cost_first_message_drops = 8;
}

// --- Delete ---

message KeystoneDeleteAgentCardRequest {
  string agent_id = 1;
}

// Server returns google.protobuf.Empty; keep a minimal response message
// so proto-loader has something to deserialize (empty message is compatible).
message KeystoneDeleteAgentCardResponse {
}
